--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "contentful-blog-in-5-min",
+  "name": "daily-blockchain",
   "version": "1.1.1",
   "description": "A static blog based on Contentful",
-  "author": "stefan judis <stefanjudis@gmail.com>",
+  "author": "lekaha<lekaha@gmail.com>",
   "private": true,
   "dependencies": {
     "@nuxtjs/pwa": "^2.0.8",
