--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "contentful": "^4.3.0",
     "contentful-management": "^3.4.0",
     "nuxt": "^1.4.0",
-    "vue-markdown": "^2.1.3"
+    "vue-i18n": "^7.6.0",
+    "vue-markdown": "^2.2.4"
   },
   "scripts": {
     "dev": "nuxt",
